boltffi_backend/tests/kotlin/snapshots/kotlin__exports__kotlin_target_renders_string_functions_as_byte_arrays.snap
---
source: boltffi_backend/tests/kotlin/exports.rs
expression: "rendered_fixture(\"exports/string_functions\")"
---
===== com/boltffi/demo/Demo.kt =====
@file:OptIn(kotlin.ExperimentalUnsignedTypes::class)

package com.boltffi.demo
@Suppress("FunctionName")
private object Native {
    @JvmStatic external fun boltffi_function_demo_echo_string(message: java.nio.ByteBuffer, __boltffi_message_len: Int): ByteArray?
    @JvmStatic external fun boltffi_function_demo_echo_str(message: java.nio.ByteBuffer, __boltffi_message_len: Int): ByteArray?
}

fun echoString(message: String): String {
    val __boltffi_message_wire = WireWriterPool.acquire(4 + Utf8Codec.maxBytes(message))
    val __boltffi_message_writer = __boltffi_message_wire.writer
    __boltffi_message_writer.writeString(message)
    try {
        val __boltffi_result = Native.boltffi_function_demo_echo_string(__boltffi_message_wire.directBuffer(), __boltffi_message_wire.size()) ?: throw IllegalStateException("null buffer returned")
        val __boltffi_reader = WireReader(__boltffi_result)
        return __boltffi_reader.readString()
    } finally {
        __boltffi_message_wire.close()
    }
}

fun echoStr(message: String): String {
    val __boltffi_message_wire = WireWriterPool.acquire(4 + Utf8Codec.maxBytes(message))
    val __boltffi_message_writer = __boltffi_message_wire.writer
    __boltffi_message_writer.writeString(message)
    try {
        val __boltffi_result = Native.boltffi_function_demo_echo_str(__boltffi_message_wire.directBuffer(), __boltffi_message_wire.size()) ?: throw IllegalStateException("null buffer returned")
        val __boltffi_reader = WireReader(__boltffi_result)
        return __boltffi_reader.readString()
    } finally {
        __boltffi_message_wire.close()
    }
}
