boltffi_backend/tests/kotlin/snapshots/kotlin__exports__kotlin_target_retains_async_class_arguments_until_the_future_starts.snap
---
source: boltffi_backend/tests/kotlin/exports.rs
expression: rendered
---
===== com/boltffi/demo/Demo.kt =====
@file:OptIn(kotlin.ExperimentalUnsignedTypes::class)

package com.boltffi.demo

import kotlinx.coroutines.launch
@Suppress("FunctionName")
private object Native {
    @JvmStatic external fun boltffi_release_class_demo_engine(handle: Long): Unit
    @JvmStatic external fun boltffi_init_class_demo_engine_new(): Long
    @JvmStatic external fun boltffi_method_class_demo_engine_merge(`receiver`: Long, other: Long): Long
    @JvmStatic external fun boltffi_async_method_class_demo_engine_merge_poll(handle: Long, callback_data: Long): Byte
    @JvmStatic external fun boltffi_async_method_class_demo_engine_merge_complete(handle: Long): Int
    @JvmStatic external fun boltffi_async_method_class_demo_engine_merge_cancel(handle: Long): Unit
    @JvmStatic external fun boltffi_async_method_class_demo_engine_merge_free(handle: Long): Unit
    @JvmStatic external fun boltffi_async_method_class_demo_engine_merge_panic_message(handle: Long): ByteArray?
    @JvmStatic external fun boltffi_function_demo_inspect(engine: Long): Long
    @JvmStatic external fun boltffi_async_function_demo_inspect_poll(handle: Long, callback_data: Long): Byte
    @JvmStatic external fun boltffi_async_function_demo_inspect_complete(handle: Long): Int
    @JvmStatic external fun boltffi_async_function_demo_inspect_cancel(handle: Long): Unit
    @JvmStatic external fun boltffi_async_function_demo_inspect_free(handle: Long): Unit
    @JvmStatic external fun boltffi_async_function_demo_inspect_panic_message(handle: Long): ByteArray?

    @JvmStatic fun boltffiFutureContinuationCallback(handle: Long, pollResult: Byte) {
        BoltFfiAsync.resume(handle, pollResult)
    }
}

class Engine internal constructor(internal val handle: Long) : AutoCloseable {
    private val __boltffi_calls = java.util.concurrent.atomic.AtomicLong(1L)
    private val __boltffi_closed = java.util.concurrent.atomic.AtomicBoolean(false)

    override fun close() {
        if (__boltffi_closed.compareAndSet(false, true)) {
            boltffiRelease()
        }
    }

    internal fun __boltffiTakeHandle(): Long {
        check(__boltffi_closed.compareAndSet(false, true)) { "Engine is closed" }
        if (!__boltffi_calls.compareAndSet(1L, 0L)) {
            boltffiRelease()
            throw IllegalStateException("Engine was passed by value while a call on it was still in flight; it has been closed")
        }
        return handle
    }

    internal fun boltffiHandle(): Long {
        check(!__boltffi_closed.get()) { "Engine is closed" }
        return handle
    }

    internal fun boltffiRetain(): Long {
        while (true) {
            check(!__boltffi_closed.get()) { "Engine is closed" }
            val calls = __boltffi_calls.get()
            check(calls != 0L) { "Engine is closed" }
            if (__boltffi_calls.compareAndSet(calls, calls + 1L)) return handle
        }
    }

    internal fun boltffiRelease() {
        if (__boltffi_calls.decrementAndGet() == 0L) {
            Native.boltffi_release_class_demo_engine(handle)
        }
    }

    constructor() : this(new().handle)

    companion object {
        fun new(): Engine {
            return Engine(Native.boltffi_init_class_demo_engine_new())
        }
    }

    suspend fun merge(other: Engine): UInt {
        return boltffiCallAsync(
            createFuture = {
                val __boltffi_receiver = boltffiRetain()
                try {
                    var __boltffi_other_handle = 0L
                    try {
                        __boltffi_other_handle = other.boltffiRetain()
                        Native.boltffi_method_class_demo_engine_merge(__boltffi_receiver, __boltffi_other_handle)
                    } finally {
                        if (__boltffi_other_handle != 0L) other.boltffiRelease()
                    }
                } catch (__boltffi_failure: Throwable) {
                    boltffiRelease()
                    throw __boltffi_failure
                }
            },
            poll = { future, contHandle -> Native.boltffi_async_method_class_demo_engine_merge_poll(future, contHandle) },
            complete = { future ->
                Native.boltffi_async_method_class_demo_engine_merge_complete(future).toUInt()
            },
            free = { future ->
                try {
                    Native.boltffi_async_method_class_demo_engine_merge_free(future)
                } finally {
                    boltffiRelease()
                }
            },
            cancel = { future -> Native.boltffi_async_method_class_demo_engine_merge_cancel(future) },
        )
    }
}

suspend fun inspect(engine: Engine): UInt {
    return boltffiCallAsync(
        createFuture = {
            var __boltffi_engine_handle = 0L
            try {
                __boltffi_engine_handle = engine.boltffiRetain()
                Native.boltffi_function_demo_inspect(__boltffi_engine_handle)
            } finally {
                if (__boltffi_engine_handle != 0L) engine.boltffiRelease()
            }
        },
        poll = { future, contHandle -> Native.boltffi_async_function_demo_inspect_poll(future, contHandle) },
        complete = { future ->
            Native.boltffi_async_function_demo_inspect_complete(future).toUInt()
        },
        free = { future -> Native.boltffi_async_function_demo_inspect_free(future) },
        cancel = { future -> Native.boltffi_async_function_demo_inspect_cancel(future) },
    )
}
